# 007-First-Light-Save-Resigner-Tooling-WIP

./: README.md  bruteforce_save.py  decrypt_save.py  encrypt_save.py  parse_save_variables.py  resign_save.py
.github/: build.yml
Rust CLI/: Cargo.toml
Rust CLI/src/: crypto.rs  main.rs  ops.rs  parser.rs  utils.rs
Rust egui/: Cargo.toml  build.rs
Rust egui/src/: cli.rs  main.rs  ops.rs  utils.rs
