[package]
name = "fl007"
version = "1.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["glow"] }
egui = "0.34.3"
flate2 = "1.1.9"
rfd = "0.17.2"
sha1 = "0.11.0"

[build-dependencies]
embed-resource = "3.0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
